# drlearn

./: .buildinfo  .gitignore  README.md  api.html  genindex.html  index.html  objects.inv  pyproject.toml  quickstart.html  quickstart.ipynb  search.html  searchindex.js  spectra.html
.doctrees/: api.doctree  environment.pickle  index.doctree  quickstart.doctree  spectra.doctree
.doctrees/api/: drlearn.BinaryLogisticRegression.doctree  drlearn.MultinomialLogisticRegression.doctree  drlearn.Ridge.doctree  drlearn.make_esrm_spectrum.doctree  drlearn.make_extremile_spectrum.doctree  drlearn.make_superquantile_spectrum.doctree
.doctrees/nbsphinx/: spectra.ipynb
.github/workflows/: doc.yml
_modules/: index.html
_modules/drlearn/: estimators.html  spectral_risk.html
_sources/: api.rst.txt  index.rst.txt
_sources/api/: drlearn.BinaryLogisticRegression.rst.txt  drlearn.MultinomialLogisticRegression.rst.txt  drlearn.Ridge.rst.txt  drlearn.make_superquantile_spectrum.rst.txt
api/: drlearn.BinaryLogisticRegression.html  drlearn.MultinomialLogisticRegression.html  drlearn.Ridge.html  drlearn.make_esrm_spectrum.html  drlearn.make_extremile_spectrum.html  drlearn.make_superquantile_spectrum.html
docs/: api.rst  conf.py  index.rst  quickstart.ipynb
docs/_static/: custom.css
docs/api/: drlearn.make_esrm_spectrum.rst  drlearn.make_extremile_spectrum.rst
src/: __init__.py
src/drlearn/: __init__.py  estimators.py  loss.py  optim.py  spectral_risk.py  utils.py
tests/: test_estimators.py  test_spectral_risk.py
